fix: json file수정, null처리 수정